--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Advanced Domain Extractor</h1>
+        <h1>Dynamic Sales Url extractor</h1>
         <textarea id="inputText" placeholder="Paste your text with domains here..."></textarea>
         <button onclick="extractDomains()">Extract Domains</button>
         
